# BITCS

./: README.md
编译原理/labs/Compilerlab1/: CMakeLists.txt  compilerlab1.cpp  input.txt  input2.txt  input3.txt  rs1  rs11  rs2
编译原理/labs/Compilerlab3/: 1.txt  1out.txt  2out.txt  3out.txt  4.txt  8.txt  8out.txt  CMakeLists.txt  Compilerlab3.zip.old  lexer.l  main.cpp  parser.y  test.cpp  testout.txt  tokens.cpp  tokens.hpp
编译原理/labs/Compilerlab4/: CMakeLists.txt  lexer.l  parser.y  test.txt  testout.txt
编译原理/labs/Compilerlab4/Test_cases/: 10.txt  10out.txt  10out_true.txt  1out.txt  3out.txt  4out.txt  6.txt  7out.txt  8out.txt
编译原理/ppt/: 2-词法分析--2024.pptx  4-语义分析与中间代码生成-2024.pptx  5-运行环境-2024.pptx  6-代码优化-2024.pptx  8-复习题--2024.pptx
计组/: 第二章作业.docx
计组/ppt/: 习题解答（2020）.pptx
计组/实验一/: 32bitALU_report.md
计组/实验一/project1/: project_1.xpr
计网/projects/: 1120211099-周豪捷-07032101-GBN-项目报告.docx
计网/projects/Net_Project1/: 1.py  (+7 more)
计网/第一次作业/: 1120211099-周豪捷-特立2124-第一章.docx
计网/第七次作业/: 1120211099-周豪捷-07032101-第七章.docx
计网/第三次作业/: 1120211099-周豪捷-特立2124-第三章.docx
计网/第二次作业/: 1120211099-周豪捷-特立2124-第二章.docx
计网/第五次作业/: 1120211099-周豪捷-特立2124-第五章-123.docx  1120211099-周豪捷-特立2124-第五章-45678.docx
计网/第四次作业/: 1120211099-周豪捷-特立2124-第四章.docx
软工/: 新建 Microsoft PowerPoint 演示文稿.pptx  第一次讨论课.pptx  讨论课 - 基于Spring Boot的宿舍管理系统的设计与实现 - 第二组.docx  讨论课.docx  讨论课.pptx
软工/报告模板及个人总结/: 1 - 项目分工表（组长填写）.docx  2 - 小组软件项目会议过程记录表.docx  3 - 数据设计说明书.docx  4.2 - 需求规格说明书（面向对象方法）.docx  5.1 - 系统设计说明书（结构化方法）.docx  6 - 软件测试报告.docx  7 - 自我评价（个人填写）.docx
软工/软件工程/: 0软件工程.doc  1 CS3043 Assignment 1.md
(+232 files in other folders)
